--- a/restaurante/restaurante.csproj
+++ b/restaurante/restaurante.csproj
@@ -62,16 +62,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frm_cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_cliente.Designer.cs">
+      <DependentUpon>frm_cliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_estoque.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_estoque.Designer.cs">
+      <DependentUpon>frm_estoque.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_funcionario.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frm_funcionario.Designer.cs">
       <DependentUpon>frm_funcionario.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_setor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_setor.Designer.cs">
+      <DependentUpon>frm_setor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frm_cliente.resx">
+      <DependentUpon>frm_cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_estoque.resx">
+      <DependentUpon>frm_estoque.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_funcionario.resx">
       <DependentUpon>frm_funcionario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_setor.resx">
+      <DependentUpon>frm_setor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
