--- a/restaurante/restaurante.csproj
+++ b/restaurante/restaurante.csproj
@@ -117,9 +117,16 @@
     <Compile Include="frm_vendas.Designer.cs">
       <DependentUpon>frm_vendas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper.cs" />
+    <Compile Include="HelperBd.cs" />
     <Compile Include="InformaDiag.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tabelas\Cliente.cs" />
+    <Compile Include="Tabelas\Estoque.cs" />
+    <Compile Include="Tabelas\Funcionario.cs" />
+    <Compile Include="Tabelas\Pessoas_gen.cs" />
+    <Compile Include="Tabelas\Setor.cs" />
     <EmbeddedResource Include="frm_cliente.resx">
       <DependentUpon>frm_cliente.cs</DependentUpon>
     </EmbeddedResource>
