--- a/restaurante/restaurante.csproj
+++ b/restaurante/restaurante.csproj
@@ -81,6 +81,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConectaBanco.cs" />
+    <Compile Include="frm_cardapio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_cardapio.Designer.cs">
+      <DependentUpon>frm_cardapio.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_cliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,12 @@
     <Compile Include="frm_main.Designer.cs">
       <DependentUpon>frm_main.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_refeicao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_refeicao.Designer.cs">
+      <DependentUpon>frm_refeicao.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_setor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,11 +134,17 @@
     <Compile Include="InformaDiag.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tabelas\Cardapio.cs" />
     <Compile Include="Tabelas\Cliente.cs" />
     <Compile Include="Tabelas\Estoque.cs" />
     <Compile Include="Tabelas\Funcionario.cs" />
     <Compile Include="Tabelas\Pessoas_gen.cs" />
+    <Compile Include="Tabelas\Refeicao.cs" />
     <Compile Include="Tabelas\Setor.cs" />
+    <Compile Include="Tabelas\Vendas.cs" />
+    <EmbeddedResource Include="frm_cardapio.resx">
+      <DependentUpon>frm_cardapio.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_cliente.resx">
       <DependentUpon>frm_cliente.cs</DependentUpon>
     </EmbeddedResource>
@@ -138,6 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_main.resx">
       <DependentUpon>frm_main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_refeicao.resx">
+      <DependentUpon>frm_refeicao.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_setor.resx">
       <DependentUpon>frm_setor.cs</DependentUpon>
