--- a/restaurante/restaurante.csproj
+++ b/restaurante/restaurante.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>restaurante</RootNamespace>
     <AssemblyName>restaurante</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -27,6 +27,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +50,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>restaurante.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.5.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
@@ -93,12 +97,6 @@
     <Compile Include="frm_cliente.Designer.cs">
       <DependentUpon>frm_cliente.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_estoque.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frm_estoque.Designer.cs">
-      <DependentUpon>frm_estoque.cs</DependentUpon>
-    </Compile>
     <Compile Include="frm_funcionario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,21 +133,19 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tabelas\Cardapio.cs" />
-    <Compile Include="Tabelas\Cliente.cs" />
-    <Compile Include="Tabelas\Estoque.cs" />
-    <Compile Include="Tabelas\Funcionario.cs" />
+    <Compile Include="Tabelas\Aluno.cs" />
+    <Compile Include="Tabelas\Endereco.cs" />
+    <Compile Include="Tabelas\Servidor.cs" />
     <Compile Include="Tabelas\Pessoas_gen.cs" />
     <Compile Include="Tabelas\Refeicao.cs" />
-    <Compile Include="Tabelas\Setor.cs" />
-    <Compile Include="Tabelas\Vendas.cs" />
+    <Compile Include="Tabelas\Departamento.cs" />
+    <Compile Include="Tabelas\Compra.cs" />
+    <Compile Include="Tabelas\Telefone.cs" />
     <EmbeddedResource Include="frm_cardapio.resx">
       <DependentUpon>frm_cardapio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_cliente.resx">
       <DependentUpon>frm_cliente.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frm_estoque.resx">
-      <DependentUpon>frm_estoque.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_funcionario.resx">
       <DependentUpon>frm_funcionario.cs</DependentUpon>
@@ -174,6 +170,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
